test/parser/extern_functions.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:8: error: expected 'fn'
extern ;

// CHECK: [[# @LINE + 1 ]]:11: error: expected identifier
extern fn ;

// CHECK: [[# @LINE + 1 ]]:13: error: expected '('
extern fn f ;

// CHECK: [[# @LINE + 1 ]]:15: error: expected '->'
extern fn f() ;

// CHECK: [[# @LINE + 1 ]]:18: error: expected type expression
extern fn f() -> ;

// CHECK: [[# @LINE + 1 ]]:18: error: expected type expression
extern fn f() -> 1;

// CHECK: [[# @LINE + 2 ]]:1: error: expected ';'
extern fn f() -> void

// CHECK: [[# @LINE + 1 ]]:23: error: extern fn cannot have a body
extern fn f() -> void {}

extern fn puts(str: *u8) -> i32;
// CHECK: ExternFunctionDecl puts -> i32
// CHECK-NEXT:  ParamDecl:*u8 str

extern fn dprintf(fd:i32, format: *u8, ...) -> i32;
// CHECK: ExternFunctionDecl dprintf -> i32
// CHECK-NEXT:  ParamDecl:i32 fd
// CHECK-NEXT:  ParamDecl:*u8 format
// CHECK-NEXT:  ParamDecl:vararg ...

fn main() -> void {
    puts("Hello, world");
    puts("Hello, world");

    dprintf(1, "The value ten in number: '%d'\n", 10);
}
